# qb-mag

./: .env.example  .gitignore  QBittorrent-Magnet-Info.plist  README.md  package-lock.json  package.json
.github/workflows/: pages.yml  release.yml
QBittorrent Magnet/: ContentView.swift  Item.swift  Media.swift  QBittorrent_MagnetApp.swift
QBittorrent Magnet 2025-04-02 08-02-49/: QBMagnet.dmg
QBittorrent Magnet 2025-04-02 08-02-49/QBittorrent Magnet.app/Contents/: Info.plist
QBittorrent Magnet 2025-04-02 08-02-49/QBittorrent Magnet.app/Contents/MacOS/: QBittorrent Magnet
QBittorrent Magnet.xcodeproj/: project.pbxproj
QBittorrent Magnet.xcodeproj/project.xcworkspace/xcuserdata/snooplsm.xcuserdatad/: UserInterfaceState.xcuserstate
QBittorrent Magnet.xcodeproj/xcuserdata/snooplsm.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
QBittorrent Magnet.xcodeproj/xcuserdata/snooplsm.xcuserdatad/xcschemes/: xcschememanagement.plist
docs/: CNAME  index.html
docs/assets/: README.txt
scripts/: build-dmg.sh  capture-mock-screenshot.mjs  install-macos.sh
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
